# github_data_pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  client_example.py  docker-compose.yml  main.py  pyproject.toml
api/: server.py
data/: github_data.db.wal
ingestor/: github_client.py  pipeline.py
models/: github_models.py
policy_engine/: engine.py  rules.py
proto/: __init__.py  github_service.proto
storage/: storage_manager.py
utils/: grpc_client.py  logging.py
